rex (0.4.0) unstable; urgency=low
  * install package support for yum, apt and zypper
  * remove package support for yum, apt and zypper
  * added template support
  * Started Hardware and Information gathering
  * prepare for 0.4.0

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 07 Apr 2011 15:00:00 +0200


rex (0.3.2) unstable; urgency=low
  * Removed registering tasks as subs in main:: package.
  * Fixed rsync timeout bug.
  * Fixed bug if no description was set.
  * prepare for 0.3.2

 -- Jan Gehring <jan.gehring@gmail.com>  Tue, 05 Apr 2011 20:45:00 +0200

rex (0.3.1) unstable; urgency=low
  * started some documentation for rex. after install just "man rex"
  * fixed bug with command line -e and password auth
  * fixed logging output (typo)
  * prepare for 0.3.1

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 28 Mar 2011 19:30:00 +0200

rex (0.3.0) unstable; urgency=low
  * added rexify command
  * added simple rsync support
  * run commands directly from command line
  * serverranges (group "backend" => "be[01..40]";)
  * ability to call tasks from other tasks
  * syslogging
  * logging to a file
  * prepare for 0.3.0

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 22 Mar 2011 19:15:00 +0200

rex (0.2.2) unstable; urgency=low
  * (run) return command output
  * prepare for 0.2.2

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 21 Mar 2011 15:15:00 +0200

rex (0.2.1) unstable; urgency=low
  * Added pid to lock-file
  * Fixed mkdir and stat for local files.
  * prepare for 0.2.1

 -- Jan Gehring <jan.gehring@gmail.com>  Sat, 19 Feb 2011 22:30:00 +0200

rex (0.2.0) unstable; urgency=low
  * Fixed #3 (check if destination is a directory)
  * added support for parallel processing
  * renamed some FS functions
  * added stat() function
  * added is_file() function
  * added is_dir() function
  * added is_readable() function
  * added is_writable() function and an alias is_writeable()
  * Fixed #1 (no Scope::With found)
  * Fixed #2 (print help if no parameter is given)